// Vitest Snapshot v1

exports[`SvelteKit Steps > can setup layout file if it does not exist in js 1`] = `
"<script>
  import \\"../app.css\\";
</script>

<slot />
"
`;

exports[`SvelteKit Steps > can setup layout file if it does not exist in ts 1`] = `
"<script lang=\\"ts\\">
  import \\"../app.css\\";
</script>

<slot />
"
`;

exports[`SvelteKit Steps > can setup svelte.config.js file case 1 1`] = `
"import adapter from '@sveltejs/adapter-auto';
import preprocess from 'svelte-preprocess';

/** @type {import('@sveltejs/kit').Config} */
const config = {
	// Consult https://github.com/sveltejs/svelte-preprocess
	// for more information about preprocessors
	preprocess: preprocess({
        postcss: true
    }),

	kit: {
		adapter: adapter(),

		// Override http methods in the Todo forms
		methodOverride: {
			allowed: ['PATCH', 'DELETE']
		}
	}
};

export default config;
"
`;

exports[`SvelteKit Steps > can setup svelte.config.js file case 2 1`] = `
"import adapter from '@sveltejs/adapter-auto';
import preprocess from 'svelte-preprocess';

/** @type {import('@sveltejs/kit').Config} */
const config = {
	// Consult https://github.com/sveltejs/svelte-preprocess
	// for more information about preprocessors
	preprocess: preprocess({
        foo: 'bar',
        postcss: true
    }),

	kit: {
		adapter: adapter(),

		// Override http methods in the Todo forms
		methodOverride: {
			allowed: ['PATCH', 'DELETE']
		}
	}
};

export default config;
"
`;
